--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ BASE_URL=http://localhost:8000/
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=""
-DB_NAME=nome_do_banco
+DB_NAME=qts
 
 SITE_TELEFONE=""
 SITE_WHATSAPP=""
